--- a/index.html
+++ b/index.html
@@ -9,11 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
   <title>Frontend Mentor | NFT preview card component</title>
   <link rel="stylesheet" href="styles.css">
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  
 </head>
 <body>
 <div class="card-container card-styles">
@@ -32,7 +28,7 @@
   </div>
  <div class="text-color user">
   <img class="user-avatar" src="images/image-avatar.png" alt="avatar of user">
-  Creation of <span class="user-name">Jules Wyvern</span>
+    <p class="user-text">Creation of <span class="user-name">Jules Wyvern</span></p>
 </div>
 </div>
  
