--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
 </head>
 <body>
 <div class="card-container card-styles">
-  <img src="images/image-equilibrium.jpg" alt="a picture of a cube">
-  <div class="id-number">Equilibrium #3429</div> 
+  <div class="overlay-wrapper">
+    <img src="images/image-equilibrium.jpg" alt="a picture of a cube">
+    <div class="eye-wrapper">
+      <svg class="eye" width="48" height="48" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><path d="M0 0h48v48H0z"/><path d="M24 9C14 9 5.46 15.22 2 24c3.46 8.78 12 15 22 15 10.01 0 18.54-6.22 22-15-3.46-8.78-11.99-15-22-15Zm0 25c-5.52 0-10-4.48-10-10s4.48-10 10-10 10 4.48 10 10-4.48 10-10 10Zm0-16c-3.31 0-6 2.69-6 6s2.69 6 6 6 6-2.69 6-6-2.69-6-6-6Z" fill="#FFF" fill-rule="nonzero"/></g></svg>
+    </div>
+  </div>
+  <div class="id-number"><span class="hover">Equilibrium #3429</span></div> 
   <p class="text-color">Our Equilibrium collection promotes balance and calm.</p>
   <div class="price-time-left">
     <div>
@@ -28,7 +33,7 @@
   </div>
  <div class="text-color user">
   <img class="user-avatar" src="images/image-avatar.png" alt="avatar of user">
-    <p class="user-text">Creation of <span class="user-name">Jules Wyvern</span></p>
+    <p class="user-text">Creation of <span class="user-name hover">Jules Wyvern</span></p>
 </div>
 </div>
  
