added anchor link

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">James Trevino</a>
+    Coded by <a href="https://github.com/James-T89">James Trevino</a>
   </div>
 </body>
 </html>
